--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Greeting from "../components/Greeting.astro";
+import Greeting from "../components/Greeting";
 ---
 
 <BaseLayout pageTitle="Home">
